Unify getOpenAbsences and getClosedAbsences methods in absence service